--- a/ColorfulBox/ColorfulBox/ColorfulBox.csproj
+++ b/ColorfulBox/ColorfulBox/ColorfulBox.csproj
@@ -96,7 +96,10 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="ArgbColorBridge.cs" />
+    <Compile Include="ArgbConverter.cs" />
+    <Compile Include="ArgbModel.cs" />
     <Compile Include="ColorAndRadiusToTransformXBridge.cs" />
+    <Compile Include="ColorGradient.cs" />
     <Compile Include="ColorPalette.cs" />
     <Compile Include="ColorPoint.cs" />
     <Compile Include="ColorPointVisual.cs" />
@@ -108,6 +111,7 @@
     <Compile Include="DragStartedCommandParameter.cs" />
     <Compile Include="HsvWheel.cs" />
     <Compile Include="HsvWheelColorPalette.cs" />
+    <Compile Include="IColorConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
