--- a/ColorfulBox/ColorfulBox/ColorfulBox.csproj
+++ b/ColorfulBox/ColorfulBox/ColorfulBox.csproj
@@ -115,6 +115,7 @@
     <Compile Include="ColorPoint.cs" />
     <Compile Include="ColorPointCollection.cs" />
     <Compile Include="ColorPointVisual.cs" />
+    <Compile Include="Common\ColorExtensions.cs" />
     <Compile Include="Common\PropertyEventArgs.cs" />
     <Compile Include="Converters\ColorToAngleConverter.cs" />
     <Compile Include="Converters\ColorToBrushConverter.cs" />
