--- a/ColorfulBox/ColorfulBox/ColorfulBox.csproj
+++ b/ColorfulBox/ColorfulBox/ColorfulBox.csproj
@@ -117,6 +117,8 @@
     <Compile Include="ColorPaletteControls\ColorPointCollection.cs" />
     <Compile Include="ColorPaletteControls\ColorPointVisual.cs" />
     <Compile Include="ColorPaletteStrategies\MonochromaticStrategy.cs" />
+    <Compile Include="ColorPaletteStrategies\ShadesStrategy.cs" />
+    <Compile Include="ColorPaletteStrategies\TriadStrategy.cs" />
     <Compile Include="Common\ColorExtensions.cs" />
     <Compile Include="Common\PropertyEventArgs.cs" />
     <Compile Include="Converters\ColorToAngleConverter.cs" />
