--- a/ColorfulBox/ColorfulBox.Localization/ColorfulBox.Localization.csproj
+++ b/ColorfulBox/ColorfulBox.Localization/ColorfulBox.Localization.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ColorfulBox.Localization</RootNamespace>
     <AssemblyName>ColorfulBox.Localization</AssemblyName>
-    <DefaultLanguage>zh-CN</DefaultLanguage>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.15063.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
